<?xml version="1.0"?>
<package>
  <name>falcon_ros</name>
  <version>0.1.0</version>
  <description>OpenSource ROS-O wrapper for Novint Falcon devices</description>
  <author>Steven Martin</author>
  <author>Michael Goerner</author>
  <license>BSD</license>
  <maintainer email="me@v4hn.de">Michael Goerner</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libnifalcon</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>libnifalcon</run_depend>
</package>


