<?xml version="1.0"?>
<package format="2">
  <name>falcon_ros</name>
  <version>0.1.0</version>
  <description>OpenSource ROS-O wrapper for Novint Falcon devices</description>
  <author>Steven Martin</author>
  <author>Michael Goerner</author>
  <license>BSD</license>
  <maintainer email="me@v4hn.de">Michael Goerner</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
